force-app/main/default/objects/ASYMBL_Time__Timesheet__c/ASYMBL_Time__Timesheet__c.object-meta.xml
<CustomObject>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>