force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Adjusted_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Adjusted_Gross_Profit__c</fullName>
    <formula>IF(OR(ISPICKVAL(ASYMBL_Time__Status__c, &quot;Submitted for Approval&quot;),ISPICKVAL(ASYMBL_Time__Status__c, &quot;Approved&quot;),ISPICKVAL(ASYMBL_Time__Status__c, &quot;Approved by Branch&quot;)), (ASYMBL_Time__Total_Billable_Amount__c - (ASYMBL_Time__Total_Candidate_Pay__c + (ASYMBL_Time__Burden__c * ASYMBL_Time__Total_Candidate_Pay__c))), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>