force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Approved_By_Branch__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Approved_By_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Branch</label>
    <type>Checkbox</type>
</CustomField>