force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Approved_Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved/Rejected By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets (Approved/Rejected By)</relationshipLabel>
    <relationshipName>Timesheets3</relationshipName>
    <type>Lookup</type>
</CustomField>