force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Branch_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Branch_Approved_On__c</fullName>
    <label>Branch Approved On</label>
    <type>DateTime</type>
</CustomField>