force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Branch_Approver__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Branch_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>