force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Burden__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Burden__c</fullName>
    <label>Burden %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>