force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Candidate__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>