force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Candidate_Name__c</fullName>
    <formula>ASYMBL_Time__Candidate__r.FirstName &amp; &quot; &quot; &amp; ASYMBL_Time__Candidate__r.LastName</formula>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>