force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Comments__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>