force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Double_Time_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Double_Time_Pay_Rate__c</fullName>
    <label>Double Time Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>