force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Is_Candidate_Rate_Card_Present__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Is_Candidate_Rate_Card_Present__c</fullName>
    <formula>NOT(ISBLANK(ASYMBL_Time__Candidate_Rate_Card__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Candidate Rate Card Present</label>
    <type>Checkbox</type>
</CustomField>