force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Number_of_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Number_of_Adjustments__c</fullName>
    <label>Number of Adjustments</label>
    <summaryForeignKey>ASYMBL_Time__Timesheet_Adjustment__c.ASYMBL_Time__Timesheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>