force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Overtime_Hours__c</fullName>
    <label>Overtime Hours</label>
    <summarizedField>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Overtime_Hours__c</summarizedField>
    <summaryForeignKey>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>