force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Pay_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Pay_Period_Start_Date__c</fullName>
    <label>Pay Period Start Date</label>
    <type>Date</type>
</CustomField>