force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Pay_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rule</label>
    <referenceTo>ASYMBL_Time__Pay_Rule__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>