force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Rejection_History__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Rejection_History__c</fullName>
    <label>Rejection History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>