force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>