force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Status_Image__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Status_Image__c</fullName>
    <formula>IF(ISPICKVAL(ASYMBL_Time__Status__c, &quot;Approved&quot;), IMAGE(&quot;/resource/ASYMBL_Time__AsymblTimeResources/AsymblTimeResources/images/Timesheet_Status_Approved.svg&quot;, &quot;Approved&quot;, 30, 70), IF(ISPICKVAL(ASYMBL_Time__Status__c, &quot;Draft&quot;), IMAGE(&quot;/resource/ASYMBL_Time__AsymblTimeResources/AsymblTimeResources/images/Timesheet_Status_Draft.svg&quot;, &quot;Draft&quot;, 30, 70), IF(ISPICKVAL(ASYMBL_Time__Status__c, &quot;New&quot;), IMAGE(&quot;/resource/ASYMBL_Time__AsymblTimeResources/AsymblTimeResources/images/Timesheet_Status_New.svg&quot;, &quot;New&quot;, 30, 70), IF(ISPICKVAL(ASYMBL_Time__Status__c, &quot;Rejected&quot;), IMAGE(&quot;/resource/ASYMBL_Time__AsymblTimeResources/AsymblTimeResources/images/Timesheet_Status_Rejected.svg&quot;, &quot;Rejected&quot;, 30, 70), IF(ISPICKVAL(ASYMBL_Time__Status__c, &quot;Approved by Branch&quot;), IMAGE(&quot;/resource/ASYMBL_Time__AsymblTimeResources/AsymblTimeResources/images/Timesheet_Status_Branch_Approved.svg&quot;, &quot;Approved by Branch&quot;, 30, 120) , IMAGE(&quot;/resource/ASYMBL_Time__AsymblTimeResources/AsymblTimeResources/images/Timesheet_Status_Submitted.svg&quot;, &quot;Submitted for Approval&quot;, 30, 70))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>