force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets (Timesheet Approver)</relationshipLabel>
    <relationshipName>Timesheets1</relationshipName>
    <type>Lookup</type>
</CustomField>