force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Timesheet_Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Timesheet_Delegated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Delegated Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets (Timesheet Delegated Approver)</relationshipLabel>
    <relationshipName>Timesheets2</relationshipName>
    <type>Lookup</type>
</CustomField>