force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Timesheet_Delegated_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Timesheet_Delegated_Approver_Name__c</fullName>
    <formula>ASYMBL_Time__Timesheet_Delegated_Approver__r.FirstName  &amp; &quot; &quot; &amp;  ASYMBL_Time__Timesheet_Delegated_Approver__r.LastName</formula>
    <label>Timesheet Delegated Approver</label>
    <type>Text</type>
</CustomField>