force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Timesheet_Type__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Timesheet_Type__c</fullName>
    <label>Timesheet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ASYMBL_Time__Timesheet_Type</valueSetName>
    </valueSet>
</CustomField>