force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Adjusted_Pay__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Adjusted_Pay__c</fullName>
    <label>Total Adjusted Pay</label>
    <summarizedField>ASYMBL_Time__Timesheet_Adjustment__c.ASYMBL_Time__Change_in_Pay__c</summarizedField>
    <summaryFilterItems>
        <field>ASYMBL_Time__Timesheet_Adjustment__c.ASYMBL_Time__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ASYMBL_Time__Timesheet_Adjustment__c.ASYMBL_Time__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>