force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Alternative_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Alternative_Billable_Hours__c</fullName>
    <label>Total Alternative Billable Hours</label>
    <summarizedField>ASYMBL_Time__Alternative_Time__c.ASYMBL_Time__Total_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>ASYMBL_Time__Alternative_Time__c.ASYMBL_Time__Is_Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ASYMBL_Time__Alternative_Time__c.ASYMBL_Time__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>