force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Alternative_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Alternative_Payable_Amount__c</fullName>
    <formula>ASYMBL_Time__Total_Alternative_Payable_Hours__c * ASYMBL_Time__Pay_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Alternative Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>