force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Bill__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Bill__c</fullName>
    <formula>ASYMBL_Time__Total_Alternative_Billable_Amount__c + ASYMBL_Time__Total_Billable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>