force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Billable_Amount__c</fullName>
    <formula>ASYMBL_Time__Regular_Billable_Amount_From_Entries__c + ASYMBL_Time__Overtime_Billable_Amount_From_Entries__c + ASYMBL_Time__Double_Time_Billable_Amount_From_Entries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>