force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Candidate_Pay__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Candidate_Pay__c</fullName>
    <formula>ASYMBL_Time__Total_Regular_Pay_From_Entries__c + ASYMBL_Time__Total_Overtime_Pay_From_Entries__c + ASYMBL_Time__Total_Double_Time_Pay_From_Entries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Candidate Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>