force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Days_Worked__c</fullName>
    <label>Total Days Worked</label>
    <summaryFilterItems>
        <field>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Worked_on_this_Day__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Timesheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>