force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Double_Time_Pay_From_Entries__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Double_Time_Pay_From_Entries__c</fullName>
    <label>Total Double Time Pay</label>
    <summarizedField>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Double_Time_Pay__c</summarizedField>
    <summaryForeignKey>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>