force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Hours_Logged__c</fullName>
    <formula>ASYMBL_Time__Regular_Hours__c + ASYMBL_Time__Overtime_Hours__c + ASYMBL_Time__Double_Time_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>