force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/ASYMBL_Time__Total_Units_Worked__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Total_Units_Worked__c</fullName>
    <label>Total Units Worked</label>
    <summarizedField>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Total_Units_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Total_Units_Worked__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>ASYMBL_Time__Time_Entry__c.ASYMBL_Time__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>