force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/Create_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, triggers automatic invoice creation from timesheet data. Invoice will be created or updated based on placement and time period.</description>
    <inlineHelpText>Check this box to create invoices from this timesheet. Invoices will be consolidated by account and time period according to billing profile settings.</inlineHelpText>
    <label>Create Invoice</label>
    <type>Checkbox</type>
</CustomField>