force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/Invoice_Generation_Error__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generation_Error__c</fullName>
    <description>Stores error message if invoice generation fails</description>
    <label>Invoice Generation Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>