force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/Invoice_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generation_Status__c</fullName>
    <description>Tracks the status of invoice generation for this timesheet</description>
    <label>Invoice Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>