force-app/main/default/objects/ASYMBL_Time__Timesheet__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>bpats__Placement__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Placement_TimesheetsASYMBL_Time_Timeshe</relationshipName>
    <type>Lookup</type>
</CustomField>