force-app/main/default/objects/ASYMBL_Time__Timesheet__c/listViews/ASYMBL_Time__All.listView-meta.xml
<ListView>
    <fullName>ASYMBL_Time__All</fullName>
    <columns>NAME</columns>
    <columns>ASYMBL_Time__Status__c</columns>
    <columns>ASYMBL_Time__Candidate__c</columns>
    <columns>ASYMBL_Time__Bill_Rate__c</columns>
    <columns>ASYMBL_Time__Pay_Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>